
20140707: 0.7.0
	Rewrote the configure management module to concentrate in the 
	csc_config interface. Win32 registry supported.

	* smm_config.c: rewrote to be the underlayer of csc_config.c.
	* csc_config.c: using smm_config.c as its I/O interface.

20140516: 0.6.4
	* smm_config.c: Renamed smm_config_read() to smm_config_read_alloc()
	to reflect its allocation nature. 
	Added smm_config_read_int() and smm_config_write_int().

	* csc_cfg_save(): save its subkey first then to walk through subkeys.

20140515: 0.6.3
	* smm: reviewed all functions in smm by checking NULL pointer.
	* smm_mbstowcs.c/smm_wcstombs.c: functions renamed to reflect its
	allocation nature.
	* smm_fontpath.c: revised by smm utility.

20140515: 0.6.2
	* csc_cfg_save(): fixed the bug which open the resource file read only

20140514: 0.6.1
	* csc_cfg_write: fixed a bug by checking NULL pointer.
	* smm_config.c: supported SMM_CFGROOT_CURRENT.

20140514: 0.6.0
	* csc_extname_filter.c: functions in the same group moved in.
	Added csc_extname_filter_export() and
	csc_extname_filter_export_alloc();

20140513: 0.5.1
	* smm_config.c: updated smm_config_open() with a mode option.
	* csc_config.c: updated csc_cfg_open() with an extended mode option.

20140509: 0.5.0
	* cli: a lot of changes in the command line interface.

20140507: 0.4.2
	* csc_mkargs.c: updated and reviewed the codes.
	* main/csc_cdll_main.c: example and test codes added.

20140507: 0.4.1
	Removed the \copyright field in doxygen part because it doesn't 
	compatible with pre-1.8.x.
	
	Create 'cli' directory to host command line interface process functions.

20140430: 0.4.0
	Revised the codes with Doxygen supporting

20131009: 0.2.2
	Open files with the sharing mode when retrieving file size

20130830: 0.2.1
	Merged all modules into libcsoup 0.2.1

20120820: SMM V1.1.0.0 
	Replaced the error codes strategy by smm style consistently
	Improved the smm_pathtrek() function

20111103: SMM V1.0.0.0 
	Port from ezthum project
	